--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtvirtualkeyboard-opensource-src (5.7.1-0neon) UNRELEASED; urgency=medium
+
+  * neon build
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 25 Jan 2017 14:36:54 +0000
+
 qtvirtualkeyboard-opensource-src (5.7.0-0neon1) xenial; urgency=medium
 
   * New upstream release
