--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtvirtualkeyboard-opensource-src (5.7.1-1) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.7.1+dfsg-1) UNRELEASED; urgency=medium
 
   * Initial release (Closes: #697509).
     - Based on previous work by Jonathan Riddell and Bhushan Shah.
