--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
+
 qtvirtualkeyboard-opensource-src (5.7.1+dfsg-1) unstable; urgency=medium
 
   * Initial release (Closes: #697509).
