--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Add pkg-config as a build dependency, it is used to detect the system's
+    hunspell.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
 
 qtvirtualkeyboard-opensource-src (5.7.1+dfsg-1) unstable; urgency=medium
