--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Add pkg-config as a build dependency, it is used to detect the system's
     hunspell.
+  * Revert the internal dependencies order: it's the plugin that needs the
+    QML module and not the other way around.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
 
