--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-qtvirtualkeyboard-opensource-src (5.9.0-0neon) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.9.1-0neon) UNRELEASED; urgency=medium
 
   * neon build
+  * New release
 
- -- Jonathan Riddell <jr@jriddell.org>  Thu, 22 Jun 2017 11:53:40 +0100
+ -- Jonathan Riddell <jr@jriddell.org>  Fri, 30 Jun 2017 13:40:48 +0100
 
 qtvirtualkeyboard-opensource-src (5.7.0-0neon1) xenial; urgency=medium
 
