--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.9.1+dfsg-1) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Add pkg-config as a build dependency, it is used to detect the system's
     hunspell.
   * Revert the internal dependencies order: it's the plugin that needs the
     QML module and not the other way around.
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+  * Bump Qt build-dependencies to 5.9.1.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
 
