--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ qtvirtualkeyboard-opensource-src (5.9.1+dfsg-1) UNRELEASED; urgency=medium
   * Drop disable_third_party.patch, third-party stuff is already disabled
     by default (except hunspell).
   * Update debian/copyright.
+  * Bump Standards-Version to 4.0.0, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
 
