--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
     hunspell.
   * Revert the internal dependencies order: it's the plugin that needs the
     QML module and not the other way around.
+  * Add hunspell-en-gb as a test build dependency, is it used to check
+    hunspell's functionality.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
 
