--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) unstable; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * Add pkg-config as a build dependency, it is used to detect the system's
     hunspell.
   * Revert the internal dependencies order: it's the plugin that needs the
@@ -8,7 +7,7 @@ qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) UNRELEASED; urgency=medium
   * Add hunspell-en-gb as a test build dependency, is it used to check
     hunspell's functionality.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 Jun 2017 08:27:43 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 16 Jul 2017 18:13:31 -0300
 
 qtvirtualkeyboard-opensource-src (5.7.1+dfsg-1) unstable; urgency=medium
 
