--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtvirtualkeyboard-opensource-src (5.9.1+dfsg-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 16 Jul 2017 18:22:42 -0300
+
 qtvirtualkeyboard-opensource-src (5.9.1+dfsg-1) experimental; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
