--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtvirtualkeyboard-opensource-src (5.9.1+dfsg-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 17 Aug 2017 11:22:26 -0300
+
 qtvirtualkeyboard-opensource-src (5.9.1+dfsg-2) unstable; urgency=medium
 
   * Merge release 5.7.1+dfsg-2 into the experimental branch. The repeated
