--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-qtvirtualkeyboard-opensource-src (5.9.0-0neon) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.7.1-0neon) UNRELEASED; urgency=medium
 
   * neon build
 
- -- Jonathan Riddell <jr@jriddell.org>  Thu, 22 Jun 2017 11:53:40 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 25 Jan 2017 14:36:54 +0000
 
 qtvirtualkeyboard-opensource-src (5.7.0-0neon1) xenial; urgency=medium
 
