--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-qtvirtualkeyboard-opensource-src (5.9.1-0neon) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.9.2-0neon) UNRELEASED; urgency=medium
 
   * neon build
   * New release
+  * New release
 
- -- Jonathan Riddell <jr@jriddell.org>  Fri, 30 Jun 2017 13:40:48 +0100
+ -- Jonathan Riddell <jr@jriddell.org>  Fri, 10 Nov 2017 11:41:41 +0000
 
 qtvirtualkeyboard-opensource-src (5.7.0-0neon1) xenial; urgency=medium
 
