--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtvirtualkeyboard-opensource-src (5.9.3+dfsg-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 30 Nov 2017 22:40:45 -0600
+
 qtvirtualkeyboard-opensource-src (5.9.2+dfsg-1) unstable; urgency=medium
 
   * New upstream release.
