--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtvirtualkeyboard-opensource-src (5.9.3-0neon) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.9.3+dfsg-0neon) UNRELEASED; urgency=medium
 
   * New release
 
