--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtvirtualkeyboard-opensource-src (5.10.0-0neon) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.10.0+dfsg-0neon) UNRELEASED; urgency=medium
 
   * 5.10
 
