--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtvirtualkeyboard-opensource-src (5.9.4+dfsg-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 25 Feb 2018 20:10:23 -0600
+
 qtvirtualkeyboard-opensource-src (5.9.3+dfsg-0ubuntu2) bionic; urgency=medium
 
   * Disable tests on arm64 because they're spotty.
