--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtvirtualkeyboard-opensource-src (5.10.1+dfsg-1) UNRELEASED; urgency=medium
+
+  [ Simon Quigley ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 11 Mar 2018 00:08:26 -0600
+
 qtvirtualkeyboard-opensource-src (5.9.2+dfsg-1) unstable; urgency=medium
 
   * New upstream release.
