--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtvirtualkeyboard-opensource-src (5.10.1+dfsg-1) UNRELEASED; urgency=medium
   * Bump debhelper compat to 11, no changes needed.
   * Bump Standards-version to 4.1.3, no changes needed.
   * Bump build dependencies to Qt 5.10.1.
+  * Update Vcs-* to reflect the move to Salsa.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 11 Mar 2018 00:08:26 -0600
 
