--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ qtvirtualkeyboard-opensource-src (5.10.1+dfsg-1) UNRELEASED; urgency=medium
   * Update Vcs-* to reflect the move to Salsa.
   * Update debian/watch to reflect the upstream rename.
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Do not call qmake anymore but dh_auto_configure, thus allowing the package
+    to be cross built.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 11 Mar 2018 00:08:26 -0600
 
 qtvirtualkeyboard-opensource-src (5.9.2+dfsg-1) unstable; urgency=medium
