--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ qtvirtualkeyboard-opensource-src (5.10.1+dfsg-1) UNRELEASED; urgency=medium
   * Bump build dependencies to Qt 5.10.1.
   * Update Vcs-* to reflect the move to Salsa.
   * Update debian/watch to reflect the upstream rename.
+  * Add proper multi arch tags to the binary packages.
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Do not call qmake anymore but dh_auto_configure, thus allowing the package
