--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtvirtualkeyboard-opensource-src (5.10.1+dfsg-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 21 Mar 2018 09:40:43 -0300
+
 qtvirtualkeyboard-opensource-src (5.10.1+dfsg-1) experimental; urgency=medium
 
   [ Simon Quigley ]
