Enable navigation with arrow keys and enter.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qtvirtualkeyboard-opensource-src (5.10.1+dfsg-3) UNRELEASED; urgency=medium
   * Support all languages except those that need non DFSG compliant 3rd party
     code.
   * Enable handwriting support.
+  * Enable navigation with arrow keys and enter.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 22 Mar 2018 18:23:24 +0000
 
