--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtvirtualkeyboard-opensource-src (5.10.1+dfsg-4) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Apr 2018 20:54:36 -0300
+
 qtvirtualkeyboard-opensource-src (5.10.1+dfsg-3) experimental; urgency=medium
 
   * Support all languages except those that need non DFSG compliant 3rd party
