--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtvirtualkeyboard-opensource-src (5.10.1+dfsg-5) UNRELEASED; urgency=medium
+
+  [ Simon Quigley ]
+  * Add my name to Uploaders.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:10 -0500
+
 qtvirtualkeyboard-opensource-src (5.10.1+dfsg-4) unstable; urgency=medium
 
   * Release to unstable.
