--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-qtvirtualkeyboard-opensource-src (5.9.5+dfsg-0ubuntu1) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.9.5+dfsg-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
 
- -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 14 Apr 2018 15:52:46 -0500
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 14 Apr 2018 15:54:12 -0500
 
 qtvirtualkeyboard-opensource-src (5.9.4+dfsg-0ubuntu3) bionic; urgency=medium
 
