--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtvirtualkeyboard-opensource-src (5.10.1+dfsg-5) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.10.1+dfsg-5) unstable; urgency=medium
 
   [ Simon Quigley ]
   * Add my name to Uploaders.
@@ -7,7 +7,7 @@ qtvirtualkeyboard-opensource-src (5.10.1+dfsg-5) UNRELEASED; urgency=medium
   * Disable the experimental arrow keys navigation: it avoids using Enter to
     confirm the password on SDDM. Thanks Rik Mills for the pointer.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:10 -0500
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 16 Apr 2018 15:02:10 -0300
 
 qtvirtualkeyboard-opensource-src (5.10.1+dfsg-4) unstable; urgency=medium
 
