--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtvirtualkeyboard-opensource-src (5.11.0+dfsg-0neon) UNRELEASED; urgency=medium
+
+  * Release 5.11 to neon
+
+ -- Bhushan Shah <bshah@kde.org>  Mon, 28 May 2018 04:02:47 +0000
+
 qtvirtualkeyboard-opensource-src (5.10.1+dfsg-5) unstable; urgency=medium
 
   [ Simon Quigley ]
