--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtvirtualkeyboard-opensource-src (5.11.1+dfsg-2) unstable; urgency=medium
+
+  * Upload to Sid.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 25 Jul 2018 04:49:32 -0500
+
 qtvirtualkeyboard-opensource-src (5.11.1+dfsg-1) experimental; urgency=medium
 
   * New upstream release.
