--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 29 Sep 2018 11:50:37 +0300
+
 qtvirtualkeyboard-opensource-src (5.11.1+dfsg-2) unstable; urgency=medium
 
   * Upload to Sid.
