--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Refresh disable_tcime_and_pinyin_from_lang_all.patch.
+  * Fix test_wclAutoCommitWordSetting instead of disabling it.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 29 Sep 2018 11:50:37 +0300
 
