Move qml-module-qtquick-virtualkeyboard from section libdevel to libs.
Thanks to Michael Biebl for the pointer.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium
   * Fix test_wclAutoCommitWordSetting instead of disabling it.
   * Set LIPI_ROOT and LIPI_LIB when running the tests.
   * Make tests failures fatal again.
+  * Move qml-module-qtquick-virtualkeyboard from section libdevel to libs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 29 Sep 2018 11:50:37 +0300
 
