Use HTTPS for the Homepage field.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium
   * Make tests failures fatal again.
   * Move qml-module-qtquick-virtualkeyboard from section libdevel to libs.
   * Bump Qt build-dependencies to 5.11.2.
+  * Use HTTPS for the Homepage field.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 29 Sep 2018 11:50:37 +0300
 
