--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium
   * Move qml-module-qtquick-virtualkeyboard from section libdevel to libs.
   * Bump Qt build-dependencies to 5.11.2.
   * Use HTTPS for the Homepage field.
+  * Update debian/copyright.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 29 Sep 2018 11:50:37 +0300
 
