--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium
   * Bump Qt build-dependencies to 5.11.2.
   * Use HTTPS for the Homepage field.
   * Update debian/copyright.
+  * Bump Standards-Version to 4.2.1, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 29 Sep 2018 11:50:37 +0300
 
