--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtvirtualkeyboard-opensource-src (5.11.2+dfsg-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Oct 2018 17:36:03 +0300
+
 qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) experimental; urgency=medium
 
   * New upstream release.
