--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-qtvirtualkeyboard-opensource-src (5.11.2+dfsg-2) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.11.2+dfsg-2) unstable; urgency=medium
 
-  [ Dmitry Shachnev ]
   * Make the tests non-fatal everywhere, there are too many bugs.
+  * Upload to unstable.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Oct 2018 17:36:03 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Tue, 16 Oct 2018 18:52:56 +0300
 
 qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) experimental; urgency=medium
 
