--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtvirtualkeyboard-opensource-src (5.11.2+dfsg-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 19:04:55 -0300
+
 qtvirtualkeyboard-opensource-src (5.11.2+dfsg-2) unstable; urgency=medium
 
   * Make the tests non-fatal everywhere, there are too many bugs.
