--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-qtvirtualkeyboard-opensource-src (5.11.3+dfsg-2) UNRELEASED; urgency=medium
+qtvirtualkeyboard-opensource-src (5.11.3+dfsg-2) unstable; urgency=medium
 
   [ Simon Quigley ]
   * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
   * Bump Standards-version to 4.3.0, no changes needed.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 24 Dec 2018 01:26:11 -0600
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 17:14:29 -0300
 
 qtvirtualkeyboard-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium
 
